--- a/hw3/public/index.html
+++ b/hw3/public/index.html
@@ -11,7 +11,7 @@
     
     <!-- Adding Javascript to our website -->
     <script 
-        src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+        src="javascripts/script.js">
     </script>
 
 
@@ -103,12 +103,6 @@
             <li>31 plain</li>
         </ul>
     </div>
-
-
-
-    <script>
-
-    </script>
 
 </body>
 
