--- a/hw3/public/index.html
+++ b/hw3/public/index.html
@@ -9,13 +9,6 @@
 <!-- Webpage Header -->
 <head>
     
-    <!-- Adding Javascript to our website -->
-    <script 
-        src="javascripts/script.js">
-    </script>
-
-
-
     <meta charset="UTF-8">
     <title>Cheesecake Order Form</title>
     <link rel="stylesheet" href="stylesheets\style.css">
@@ -103,6 +96,10 @@
             <li>31 plain</li>
         </ul>
     </div>
+
+       <!-- Adding Javascript to our website -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="javascripts/script.js"></script>
 
 </body>
 
