--- a/Niazy_JS_App/public/index.html
+++ b/Niazy_JS_App/public/index.html
@@ -90,7 +90,7 @@
         </div>
 
         <!-- Unordered List -->
-        <ul>
+        <ul id="ordersList">
             <li>11 cherry</li>
             <li>17 chocolate</li>
             <li>31 plain</li>
